--- a/sprint-1/15-html-css/exercise/papa-johns-design-copy/css/style.css
+++ b/sprint-1/15-html-css/exercise/papa-johns-design-copy/css/style.css
@@ -22,13 +22,26 @@
     font-weight: 700;
 }
 
+@font-face {
+    font-family: Pappy;
+    src: url('../assets/fonts/Pappy-PJ.woff2');
+    font-weight: 700;
+}
+
+@font-face {
+    font-family: Helvetica;
+    src: url('../assets/fonts/Helvetica.ttf');
+}
+
 :root {
     --color-white: #ffffff;
     --color-red: #E60000;
+    --color-green-bright: #00a576;
     --color-green: #2d5d2a;
     --color-light: #d1d1d1;
     --color-gray-light: #f3f3f3;
-    --color-gray: #333333;
+    --color-gray: #929292;
+    --color-gray-dark: #333333;
     --color-black: #000000;
 }
 
@@ -80,16 +93,39 @@ h1 {
 .button-green {
     color: var(--color-white);
     background-color: var(--color-green);
+    font-family: PapaSans-MediumCondensed, sans-serif;
+    text-transform: uppercase;
 }
 
 
 .button-green:hover {
-    background-color: var(--color-gray);
+    background-color: var(--color-gray-dark);
 }
 
 .button-round,
 .button-round:hover {
     border-radius: 30px;
+}
+
+input {
+    height: 40px;
+    border-radius: 6px;
+    border: 1px solid var(--color-gray);
+}
+
+input[type="text"] {
+    font-family: Helvetica, Arial, sans-serif;
+    padding: 5px 5px 5px 10px;
+}
+
+input[type="text"]:focus {
+    border: 1px solid var(--color-green-bright);
+    outline: none;
+}
+
+input::placeholder {
+    font-family: Helvetica, Arial, sans-serif;
+    font-style: italic;
 }
 
 /* -------------------- Header -------------------- */
@@ -107,8 +143,7 @@ h1 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 12px 20px 20px;
-    height: 65px;
+    padding: 10px 12px 10px 20px;
 }
 
 .header__logo {
@@ -154,7 +189,7 @@ h1 {
 }
 
 #signup-btn:hover {
-    background-color: var(--color-gray);
+    background-color: var(--color-gray-dark);
 }
 
 .tracker {
@@ -174,27 +209,87 @@ h1 {
 .header__bottom {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 0 8px;
     width: 100%;
 }
 
 .bottom-nav-link {
+    display: inline-block;
     font-family: PapaSans-MediumCondensed, sans-serif;
     text-transform: uppercase;
     font-size: 30px;
     border-bottom: 4px solid transparent;
+    padding: 24px 15px;
 }
 
 .bottom-nav-link:hover {
     border-bottom-color: var(--color-green);
 }
 
-.bottom-nav-link>a {
-    display: inline-block;
-    padding: 24px 15px;
+.header__promo-cart {
+    display: flex;
+    align-items: center;
+    column-gap: 20px;
 }
 
+.promo-code-form {
+    display: flex;
+    align-items: center;
+    height: 74px;
+    padding-right: 20px;
+    border-right: 1px solid var(--color-light);
+}
+
+.promo-code-form input[type="text"] {
+    width: 220px;
+    min-width: 161px;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
+.promo-code-form input[type="submit"] {
+    font-size: 18px;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    padding: 8px 12px;
+}
+
+
+.header__cart {
+    display: flex;
+    align-items: center;
+    column-gap: 10px;
+    padding: 0 5px;
+}
+
+.cart {
+    background-image: url(../assets/icons/cart.svg);
+}
+
+.order-total {
+    display: flex;
+    align-items: flex-start;
+    column-gap: 1px;
+    font-family: PapaSans-MediumCondensed, sans-serif;
+    font-size: 24px;
+    color: var(--color-red);
+    margin-right: 3px;
+}
+
+.order-total>span:first-child {
+    font-size: 14px;
+    line-height: 18px;
+}
+
+
 /* -------------------- Hero Section-------------------- */
+
+.main {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
 
 .hero {
     height: 1400px;
