--- a/sprint-1/15-html-css/exercise/papa-johns-design-copy/css/style.css
+++ b/sprint-1/15-html-css/exercise/papa-johns-design-copy/css/style.css
@@ -90,13 +90,22 @@ h1 {
     background-position: center;
 }
 
+
+.button {
+    font-family: PapaSans-MediumCondensed, sans-serif;
+    text-transform: uppercase;
+    font-size: 18px;
+}
+
 .button-green {
     color: var(--color-white);
     background-color: var(--color-green);
-    font-family: PapaSans-MediumCondensed, sans-serif;
-    text-transform: uppercase;
 }
 
+.button-white {
+    color: var(--color-green);
+    background-color: var(--color-white);
+}
 
 .button-green:hover {
     background-color: var(--color-gray-dark);
@@ -201,7 +210,7 @@ input::placeholder {
 }
 
 .down-arrow {
-    background-image: url(../assets/icons/down-arrow-1.svg);
+    background-image: url(../assets/icons/down-arrow.svg);
     background-size: 14px auto;
     width: 14px;
 }
@@ -291,11 +300,125 @@ input::placeholder {
     width: 100%;
 }
 
-.hero {
-    height: 1400px;
+.home-hero {
+    height: 515px;
     background-color: var(--color-green);
 }
 
+.home-hero__container {
+    display: flex;
+    column-gap: 95px;
+    height: 100%;
+}
+
+.home-hero__content {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 3px;
+    padding: 110px 60px 0px;
+    width: fit-content;
+}
+
+.hero-first-title {
+    position: absolute;
+    top: 120px;
+    left: 45px;
+    z-index: 2;
+    font-family: Pappy;
+    font-size: 135px;
+    /* font-weight: 700; */
+    letter-spacing: -5px;
+    text-transform: uppercase;
+    color: var(--color-red);
+    -webkit-text-stroke: 3px var(--color-white);
+
+}
+
+.hero-second-title {
+    font-family: PapaSans-MediumCondensed, sans-serif;
+    font-size: 120px;
+    font-weight: 500;
+    color: #cfeb0c;
+    padding-right: 40px;
+}
+
+.hero-subtitle {
+    color: var(--color-white);
+    text-align: center;
+    font-family: PapaSans-MediumCondensed, sans-serif;
+    font-size: 36px;
+    font-weight: 500;
+    text-transform: uppercase;
+    padding-right: 40px;
+    margin-bottom: 120px;
+}
+
+.home-hero__content>div {
+    display: flex;
+    justify-content: space-between;
+    width: 590px;
+}
+
+.hero-price {
+    display: flex;
+    align-items: center;
+    column-gap: 7px;
+}
+
+.hero-price1 {
+    font-family: PapaSans-MediumCondensed, sans-serif;
+    font-size: 64px;
+    color: var(--color-white);
+    text-transform: uppercase;
+}
+
+.hero-price2 {
+    font-family: Pappy;
+    font-size: 84px;
+    letter-spacing: -2px;
+    color: var(--color-red);
+    -webkit-text-stroke: 2px var(--color-white);
+    padding-bottom: 5px;
+}
+
+.hero-btn {
+    padding: 16px 24px;
+    font-size: 24px;
+}
+
+.home-hero__img {
+    flex: 0 0 100%;
+    background-image: url('../assets/images/pizza-hero.webp');
+    background-repeat: no-repeat;
+    background-position: left 0px top -5px;
+    height: 650px;
+    background-size: contain;
+
+}
+
+
+/* -------------------- Deals Slider Section-------------------- */
+
+.deals-slider {
+    height: 450px;
+    background-color: var(--color-white);
+}
+
+/* -------------------- Explore Our Menu Section-------------------- */
+
+.explore-menu {
+    height: 380px;
+    background-color: var(--color-white);
+}
+
+/* -------------------- Most Popular Section-------------------- */
+
+.popular {
+    height: 400px;
+    background-color: var(--color-white);
+}
 
 /* -------------------- Footer -------------------- */
 
