--- a/sprint-1/15-html-css/exercise/papa-johns-design-copy/css/style.css
+++ b/sprint-1/15-html-css/exercise/papa-johns-design-copy/css/style.css
@@ -95,6 +95,7 @@ a {
     background-size: 25px auto;
     width: 25px;
     height: 25px;
+    flex: 0 0 25px;
     background-repeat: no-repeat;
     background-position: center;
 }
@@ -320,6 +321,7 @@ input::placeholder {
 .home-hero {
     height: 515px;
     background-color: var(--color-green);
+    overflow: hidden;
 }
 
 .home-hero__container {
@@ -488,6 +490,47 @@ input::placeholder {
 
 
 /* -------------------- Footer -------------------- */
+
+.footer {
+    background-color: var(--color-white);
+    border-top: 1px solid var(--color-light);
+}
+
+.footer__content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    max-width: 1374px;
+    padding: 40px 20px;
+    margin: 0 auto;
+}
+
+.footer__copyright {
+    font-size: 12px;
+}
+
+.footer__social-icons {
+    display: flex;
+    align-items: center;
+    column-gap: 22px;
+}
+
+.facebook {
+    background-image: url('../assets/icons/fb_icon.svg');
+}
+
+.twitter {
+    background-image: url('../assets/icons/x_twitter_icon.svg');
+}
+
+.youtube {
+    background-image: url('../assets/icons/youtube_icon.svg');
+}
+
+.instagram {
+    background-image: url('../assets/icons/instagram_icon.svg');
+}
 
 
 /* ---------- Styles for smaller screens ----------*/
