--- a/sprint-1/15-html-css/exercise/papa-johns-design-copy/css/style.css
+++ b/sprint-1/15-html-css/exercise/papa-johns-design-copy/css/style.css
@@ -456,13 +456,15 @@ input::placeholder {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    column-gap: 30px;
+    /* column-gap: 30px; */
     row-gap: 20px;
     padding: 20px 0;
+    margin: 0 auto;
 }
 
 .pizza-card {
-    width: 305px;
+    flex: 0 0 23.3%;
+    max-width: 23.3%;
     border: 1px solid var(--color-gray);
     border-radius: 6px;
     overflow: hidden;
@@ -551,7 +553,15 @@ input::placeholder {
 }
 
 
-/* ---------- Styles for smaller screens ----------*/
+/* ---------- max-width: 1500px ---------- */
+
+@media only screen and (max-width: 1500px) {
+
+    .pizza-card {
+        flex: 0 0 32%;
+        max-width: 32%;
+    }
+}
 
 /* ---------- max-width: 1100px ---------- */
 
@@ -642,6 +652,11 @@ input::placeholder {
         font-size: 26px;
         margin-bottom: 120px;
     }
+
+    .pizza-card {
+        flex: 0 0 48%;
+        max-width: 48%;
+    }
 }
 
 /* ---------- max-width: 830px ---------- */
@@ -717,6 +732,42 @@ input::placeholder {
     .hero-subtitle {
         margin-bottom: 30px;
     }
+
+    .pizza-cards-container {
+        flex-direction: column;
+    }
+
+    .pizza-card {
+        flex: 0 0 100%;
+        max-width: 100%;
+        display: flex;
+        flex-direction: row;
+        padding: 20px 0px;
+        border: none;
+        border-radius: 0;
+        border-bottom: 1px solid var(--color-light);
+    }
+
+    .pizza-card__img {
+        height: 130px;
+        width: auto;
+    }
+
+    .pizza-card__content {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: flex-start;
+        padding: 5px 0px 0px 20px;
+        height: 130px;
+    }
+
+    .pizza-card__details {
+        position: absolute;
+        top: 50px;
+        left: 20px;
+    }
+
 
 }
 
