Day15: Pizza Shop Website Project - style footer for small screens

--- a/sprint-1/15-html-css/exercise/papa-johns-design-copy/css/style.css
+++ b/sprint-1/15-html-css/exercise/papa-johns-design-copy/css/style.css
@@ -768,6 +768,10 @@ input::placeholder {
         left: 20px;
     }
 
+    .footer__content {
+        flex-direction: column-reverse;
+        row-gap: 20px;
+    }
 
 }
 
