--- a/sprint-1/15-html-css/exercise/papa-johns-design-copy/css/style.css
+++ b/sprint-1/15-html-css/exercise/papa-johns-design-copy/css/style.css
@@ -532,13 +532,58 @@ input::placeholder {
     text-align: center;
 }
 
-.order-type {
+.order-type-container {
     display: flex;
-    column-gap: 30px;
+    column-gap: 50px;
+}
+
+.order-type-container .radio-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    column-gap: 50px;
+    font-size: 24px;
+    width: 250px;
+    height: 118px;
+    border-radius: 10px;
+    border: solid 2px var(--color-black);
+}
+
+.order-type-container input[type="radio"] {
+    display: none;
+}
+
+.order-type-container input[type="radio"]:checked+.radio-button {
+    background-color: var(--color-green);
+    color: var(--color-white);
+    border: solid 2px var(--color-green);
+}
+
+.order-type-container .icon {
+    background-size: 65px auto;
+    width: 65px;
+    height: 65px;
+    flex: 0 0 65px;
+}
+
+.delivery {
+    background-image: url('../assets/icons/delivery.svg');
+}
+
+.carryout {
+    background-image: url('../assets/icons/carryout.svg');
+}
+
+.order-type-container input[type="radio"]:checked+.radio-button .delivery {
+    background-image: url('../assets/icons/delivery-white.svg');
+}
+
+.order-type-container input[type="radio"]:checked+.radio-button .carryout {
+    background-image: url('../assets/icons/carryout-white.svg');
 }
 
 .checkout__content p,
-.checkout__content label {
+.checkout__form label {
     font-family: PapaSans, sans-serif;
     font-size: 14px;
     line-height: 17px;
@@ -550,7 +595,6 @@ input::placeholder {
     flex-direction: column;
     align-items: center;
     row-gap: 25px;
-    padding: 20px 0;
 }
 
 .form-row {
