Day17: Spring Boot+Thymeleaf - get all categories

--- a/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/static/css/styles.css
+++ b/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/static/css/styles.css
@@ -1,3 +1,13 @@
-body{
+body {
     font-family: Arial, sans-serif;
+}
+
+.table-hover tbody tr:hover td,
+.table-hover tbody tr:hover th {
+    background-color: #d1f1fcd4;
+    
+}
+
+h1 {
+    color: #ADD8E6;
 }
