--- a/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/categories/details.html
+++ b/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/categories/details.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Northwind Traders</title>
+    <title>Category Details</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -11,14 +11,32 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 
 </head>
 
 <body>
     <div th:replace="fragments/header.html :: nav"></div>
+
     <main class="container mt-4">
-        <h1 class="fw-bold">Welcome to Northwind Traders</h1>
+        <h1 class="fw-bold mb-3">Category Details</h1>
+
+        <table class="table">
+            <tbody>
+                <tr>
+                    <td>Category Id</td>
+                    <td th:text="${category.categoryId}"></td>
+                </tr>
+                <tr>
+                    <td>Category Name</td>
+                    <td th:text="${category.categoryName}"></td>
+                </tr>
+                <tr>
+                    <td>Description</td>
+                    <td th:text="${category.description}"></td>
+                </tr>
+            </tbody>
+        </table>
     </main>
 </body>
 
