--- a/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/static/css/styles.css
+++ b/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/static/css/styles.css
@@ -2,14 +2,27 @@ body {
     font-family: Arial, sans-serif;
 }
 
+
+.navbar-custom {
+    background-color: #7393B3;
+}
+
 .table-hover tbody tr:hover td,
 .table-hover tbody tr:hover th {
-    /* background-color: #d1f1fcd4; */
     background-color: #7393b390;
-    
+    color: white;
+    /* font-weight: bold; */
 }
 
 h1 {
-    /* color: #ADD8E6; */
     color: #7393B3;
+}
+
+a {
+    text-decoration: none;
+    color: #7393B3;
+}
+
+.table-hover tbody tr:hover a {
+    color: white;
 }
