--- a/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/categories/details.html
+++ b/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/categories/details.html
@@ -18,13 +18,13 @@
 <body>
     <div th:replace="fragments/header.html :: nav"></div>
 
-    <main class="container mt-4">
-        <h1 class="fw-bold mb-3">Category Details</h1>
+    <main class="d-flex flex-column align-items-center gap-3 mt-5">
+        <h1 class="fw-bold mb-5">Category Details</h1>
 
-        <table class="table">
+        <table class="table w-auto">
             <tbody>
                 <tr>
-                    <td>Category Id</td>
+                    <td width="30%">Category Id</td>
                     <td th:text="${category.categoryId}"></td>
                 </tr>
                 <tr>
@@ -37,6 +37,9 @@
                 </tr>
             </tbody>
         </table>
+
+        <a th:href="@{|/products/?catId=${category.categoryId}|}" class="btn btn-secondary mt-3">View all products in this category</a>
+        
     </main>
 </body>
 
