--- a/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/categories/index.html
+++ b/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/categories/index.html
@@ -10,6 +10,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+        <link rel="stylesheet" href=
+"https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="css/styles.css">
 
@@ -18,16 +20,20 @@
 <body>
     <div th:replace="fragments/header.html :: nav"></div>
 
-    <main class="container mt-4">
+    <main class="d-flex flex-column align-items-center gap-3 mt-5">
         <h1 class="fw-bold">Categories</h1>
-        <a th:href="@{/categories/new}">New</a>
-        <table class="table table-striped table-hover">
+
+        <a th:href="@{/categories/new}" class="btn btn-secondary">Add new category</a>
+
+        <table class="table table-striped table-hover w-auto table-responsive">
             <thead>
                 <tr>
-                    <th>Id</th>
-                    <th>Category</th>
-                    <th>Description</th>
-                    <th></th>
+                    <th width="5%">Id</th>
+                    <th width="15%">Category</th>
+                    <th width="40%">Description</th>
+                    <th width="16%">Products</th>
+                    <th width="7%"></th>
+                    <th width="7%"></th>
                 </tr>
             </thead>
             <tbody>
@@ -37,9 +43,12 @@
                         <a th:href="@{|/categories/${category.categoryId}|}" th:text="${category.categoryName}"></a>
                     </td>
                     <td th:text="${category.description}"></td>
+                    <td><a th:href="@{|/products/?catId=${category.categoryId}|}"><i class="fa fa-list"></i>&nbsp;&nbsp;Products</a></td>
                     <td>
-                        <a th:href="@{|/categories/${category.categoryId}/edit|}">Edit</a>
-                        <a th:href="@{|/categories/${category.categoryId}/delete|}">Delete</a>
+                        <a th:href="@{|/categories/${category.categoryId}/edit|}"><i class="fa fa-pencil"></i>&nbsp;&nbsp;Edit</a>
+                    </td>
+                    <td>
+                        <a th:href="@{|/categories/${category.categoryId}/delete|}"><i class="fa fa-trash"></i>&nbsp;&nbsp;Delete</a>
                     </td>
                 </tr>
             </tbody>
