--- a/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/index.html
+++ b/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/index.html
@@ -17,8 +17,8 @@
 
 <body>
     <div th:replace="fragments/header.html :: nav"></div>
-    <main class="container mt-4">
-        <h1 class="fw-bold">Welcome to Northwind Traders</h1>
+    <main class="d-flex flex-column align-items-center gap-3 mt-5">
+        <h1 class="fw-bold">Welcome to Northwind Traders!</h1>
     </main>
 </body>
 
