Day17: Spring Boot+Thymeleaf - get list of products by category id
- create the ProductsController class
- add getAllProducts to the ProductDao class
- implement method to get all products or products for a category in the ProductsController class
- create and style products/index.html

--- a/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/categories/details.html
+++ b/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/categories/details.html
@@ -38,7 +38,7 @@
             </tbody>
         </table>
 
-        <a th:href="@{|/products/?catId=${category.categoryId}|}" class="btn btn-secondary mt-3">View all products in this category</a>
+        <a th:href="@{|/products?catId=${category.categoryId}|}" class="btn btn-secondary mt-3">View all products in this category</a>
         
     </main>
 </body>
