--- a/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/categories/index.html
+++ b/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/categories/index.html
@@ -43,7 +43,7 @@
                         <a th:href="@{|/categories/${category.categoryId}|}" th:text="${category.categoryName}"></a>
                     </td>
                     <td th:text="${category.description}"></td>
-                    <td><a th:href="@{|/products/?catId=${category.categoryId}|}"><i class="fa fa-list"></i>&nbsp;&nbsp;Products</a></td>
+                    <td><a th:href="@{|/products?catId=${category.categoryId}|}"><i class="fa fa-list"></i>&nbsp;&nbsp;Products</a></td>
                     <td>
                         <a th:href="@{|/categories/${category.categoryId}/edit|}"><i class="fa fa-pencil"></i>&nbsp;&nbsp;Edit</a>
                     </td>
