--- a/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/fragments/header.html
+++ b/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/fragments/header.html
@@ -10,6 +10,9 @@
                 <li class="nav-item">
                     <a th:href="@{/categories}" class="nav-link active">Categories</a>
                 </li>
+                <li class="nav-item">
+                    <a th:href="@{/products}" class="nav-link active">Products</a>
+                </li>
             </ul>
         </div>
     </div>
