Day16: Pizza Shop Website Project - Cheese Pizza Details

--- a/sprint-1/15-html-css/exercise/papa-johns-design-copy/css/style.css
+++ b/sprint-1/15-html-css/exercise/papa-johns-design-copy/css/style.css
@@ -547,6 +547,8 @@ input::placeholder {
     height: 118px;
     border-radius: 10px;
     border: solid 2px var(--color-black);
+    transition: all 0.3ms ease-in-out;
+    cursor: pointer;
 }
 
 .order-type-container input[type="radio"] {
