Day17: Spring Boot+Thymeleaf-Part2 - add some styles and fix th:replace syntax
- set max-width for navbar
- add gaps between nav elements
- change buttons to add new category and to add new product to btn-outline
- add padding to the first column on both details pages

--- a/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/static/css/styles.css
+++ b/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/static/css/styles.css
@@ -2,6 +2,10 @@ body {
     font-family: Arial, sans-serif;
 }
 
+.nav-container {
+    max-width: 1440px;
+    margin: 0 auto;
+}
 
 .navbar-custom {
     background-color: #7393B3;
@@ -11,7 +15,6 @@ body {
 .table-hover tbody tr:hover th {
     background-color: #7393b390;
     color: white;
-    /* font-weight: bold; */
 }
 
 h1 {
