--- a/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/products/details.html
+++ b/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/products/details.html
@@ -16,7 +16,8 @@
 </head>
 
 <body>
-    <div th:replace="fragments/header.html :: nav"></div>
+    <!-- <div th:replace="fragments/header.html :: nav"></div> -->
+    <div th:replace="~{fragments/header.html :: nav}"></div>
 
     <main class="d-flex flex-column align-items-center gap-3 mt-5">
         <h1 class="fw-bold mb-5">Product Details</h1>
@@ -36,7 +37,7 @@
                     <td th:text="${category.categoryName}"></td>
                 </tr>
                 <tr>
-                    <td>Quantity Per Unit</td>
+                    <td class="pe-5">Quantity Per Unit</td>
                     <td th:text="${product.quantityPerUnit}"></td>
                 </tr>
                 <tr>
