--- a/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/categories/index.html
+++ b/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/categories/index.html
@@ -18,12 +18,12 @@
 </head>
 
 <body>
-    <div th:replace="fragments/header.html :: nav"></div>
+    <div th:replace="~{fragments/header.html :: nav}"></div>
 
     <main class="d-flex flex-column align-items-center gap-3 mt-5">
         <h1 class="fw-bold">Categories</h1>
 
-        <a th:href="@{/categories/new}" class="btn btn-secondary">Add new category</a>
+        <a th:href="@{/categories/new}" class="btn btn-outline-secondary">Add new category</a>
 
         <table class="table table-striped table-hover w-auto table-responsive">
             <thead>
