--- a/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/fragments/header.html
+++ b/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/fragments/header.html
@@ -1,17 +1,17 @@
 <nav class="navbar navbar-expand-lg navbar-custom" data-bs-theme="dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="/">Northwind Traders</a>
+    <div class="container-fluid nav-container">
+        <a class="navbar-brand me-3" href="/">Northwind Traders</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
             aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav me-auto">
-                <li class="nav-item">
-                    <a th:href="@{/categories}" class="nav-link active">Categories</a>
+                <li class="nav-item pe-2">
+                    <a th:href="@{/categories}" class="nav-link">Categories</a>
                 </li>
                 <li class="nav-item">
-                    <a th:href="@{/products}" class="nav-link active">Products</a>
+                    <a th:href="@{/products}" class="nav-link">Products</a>
                 </li>
             </ul>
         </div>
