--- a/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/index.html
+++ b/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/index.html
@@ -16,10 +16,13 @@
 </head>
 
 <body>
-    <div th:replace="fragments/header.html :: nav"></div>
+    <!-- <div th:replace="fragments/header.html :: nav"></div> -->
+    <div th:replace="~{fragments/header.html :: nav}"></div>
+
     <main class="d-flex flex-column align-items-center gap-3 mt-5">
         <h1 class="fw-bold">Welcome to Northwind Traders!</h1>
     </main>
+
 </body>
 
 </html>
