--- a/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/products/index.html
+++ b/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/products/index.html
@@ -17,13 +17,13 @@
 </head>
 
 <body>
-    <div th:replace="fragments/header.html :: nav"></div>
+    <div th:replace="~{fragments/header.html :: nav}"></div>
 
     <main class="d-flex flex-column align-items-center gap-3 mt-5">
         <h1 class="fw-bold" th:if="${category.categoryName!= null}">Products: <span th:text="${category.categoryName}"></span></h1>
         <h1 class="fw-bold" th:if="${category.categoryName == null}">All Products</h1>
 
-        <a th:href="@{/products/new}" class="btn btn-secondary">Add new product</a>
+        <a th:href="@{/products/new}" class="btn btn-outline-secondary">Add new product</a>
 
         <table class="table table-striped table-hover w-auto table-responsive">
             <thead>
