Day18: Spring Boot+Thymeleaf-Part2 - add category

--- a/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/static/css/styles.css
+++ b/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/static/css/styles.css
@@ -21,6 +21,10 @@ h1 {
     color: #7393B3;
 }
 
+h1 span {
+    color: #4d6277;
+}
+
 a {
     text-decoration: none;
     color: #7393B3;
@@ -28,4 +32,8 @@ a {
 
 .table-hover tbody tr:hover a {
     color: white;
+}
+
+.category-form {
+    max-width: 500px;
 }
