--- a/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/categories/add_success.html
+++ b/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/categories/add_success.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Category Details</title>
+    <title>Add/Update Category</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -16,27 +16,15 @@
     <div th:replace="~{fragments/header.html :: nav}"></div>
 
     <main class="d-flex flex-column align-items-center gap-3 mt-5">
-        <h1 class="fw-bold mb-5">Category Details</h1>
 
-        <table class="table w-auto">
-            <tbody>
-                <tr>
-                    <td width="30%">Category Id</td>
-                    <td th:text="${category.categoryId}"></td>
-                </tr>
-                <tr>
-                    <td class="pe-2">Category Name</td>
-                    <td th:text="${category.categoryName}"></td>
-                </tr>
-                <tr>
-                    <td>Description</td>
-                    <td th:text="${category.description}"></td>
-                </tr>
-            </tbody>
-        </table>
+        <h1 class="fw-bold mb-5">Category <span class="fst-italic" th:text="${category.categoryName}"></span> &nbsp;was added successfully</h1>
 
-        <a th:href="@{|/products?catId=${category.categoryId}|}" class="btn btn-outline-secondary mt-3">View all products in this category</a>
-        
+        <h2>Category Details</h2>
+
+        <table th:replace="~{categories/details.html :: table}"></table>
+
+        <a href="/categories" class="btn btn-outline-secondary mt-5">View list of all categories</a>
+
     </main>
 </body>
 
