--- a/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/categories/delete.html
+++ b/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/categories/delete.html
@@ -3,12 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Add Category</title>
+    <title>Delete Category</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 
@@ -16,15 +17,19 @@
     <div th:replace="~{fragments/header.html :: nav}"></div>
 
     <main class="d-flex flex-column align-items-center gap-3 mt-5">
+        <h1 class="fw-bold mb-5">Delete Category</h1>
 
-        <h1 class="fw-bold mb-5">Category <span class="fst-italic" th:text="${category.categoryName}"></span> &nbsp;was added successfully</h1>
-
-        <h2>Category Details</h2>
+        <h2>
+            <i class="fa fa-exclamation-circle text-danger p-3"></i>
+            You are about to delete the following category
+        </h2>
 
         <table th:replace="~{categories/details.html :: table}"></table>
 
-        <a href="/categories" class="btn btn-outline-secondary mt-5">View list of all categories</a>
-
+        <form method="post" class="d-flex flex-row justify-content-center gap-5">
+            <a href="/categories" class="btn btn-outline-secondary mt-5">Cancel</a>
+            <input class="btn btn-outline-danger mt-5" type="submit" value="Delete">
+        </form>
     </main>
 </body>
 
