--- a/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/categories/index.html
+++ b/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/categories/index.html
@@ -16,8 +16,8 @@
 <body>
     <div th:replace="~{fragments/header.html :: nav}"></div>
 
-    <main class="d-flex flex-column align-items-center gap-3 mt-5">
-        <h1 class="fw-bold mb-5">Categories</h1>
+    <main class="d-flex flex-column align-items-center gap-5 mt-5">
+        <h1 class="fw-bold">Categories</h1>
 
         <a th:href="@{/categories/add}" class="btn btn-outline-secondary">Add new category</a>
 
