--- a/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/error.html
+++ b/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/error.html
@@ -19,7 +19,9 @@
     <div th:replace="~{fragments/header.html :: nav}"></div>
 
     <main class="d-flex flex-column align-items-center gap-3 mt-5">
-        <h1 class="fw-bold">Welcome to Northwind Traders!</h1>
+        <h1 class="fw-bold">Error</h1>
+        <h2>Sorry, there was an error with your request</h2>
+        <a href="/" class="mt-5">Go to Home Page</a>
     </main>
 
 </body>
