Day18: Spring Boot+Thymeleaf-Part2 - add product

--- a/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/products/details.html
+++ b/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/products/details.html
@@ -34,7 +34,7 @@
                 </tr>
                 <tr>
                     <td>Category Name</td>
-                    <td th:text="${category.categoryName}"></td>
+                    <td th:text="${categoryName}"></td>
                 </tr>
                 <tr>
                     <td class="pe-5">Quantity Per Unit</td>
@@ -58,6 +58,8 @@
                 </tr>
             </tbody>
         </table>
+
+        <a href="/products" class="mt-5">Back to Products Page</a>
 
     </main>
 </body>
