--- a/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/products/index.html
+++ b/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/products/index.html
@@ -23,7 +23,7 @@
         <h1 class="fw-bold" th:if="${category.categoryName!= null}">Products: <span th:text="${category.categoryName}"></span></h1>
         <h1 class="fw-bold" th:if="${category.categoryName == null}">All Products</h1>
 
-        <a th:href="@{/products/new}" class="btn btn-outline-secondary">Add new product</a>
+        <a th:href="@{/products/add}" class="btn btn-outline-secondary">Add new product</a>
 
         <table class="table table-striped table-hover w-auto table-responsive">
             <thead>
@@ -43,7 +43,7 @@
                     </td>
                     <td th:text="${#numbers.formatCurrency(product.unitPrice)}"></td>
                     <td>
-                        <a th:href="@{|/categories/${category.categoryId}/edit|}">
+                        <a th:href="@{|/products/${product.productId}/edit|}">
                             <i class="fa fa-pencil"></i>&nbsp;&nbsp;Edit
                         </a>
                     </td>
