Day18: Spring Boot+Thymeleaf-Part2 - delete product
+ also  add checkmark for product success pages

--- a/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/products/index.html
+++ b/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/products/index.html
@@ -48,7 +48,7 @@
                         </a>
                     </td>
                     <td>
-                        <a th:href="@{|/categories/${category.categoryId}/delete|}">
+                        <a th:href="@{|/products/${product.productId}/delete|}">
                             <i class="fa fa-trash"></i>&nbsp;&nbsp;Delete
                         </a>
                     </td>
