--- a/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/products/delete.html
+++ b/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/products/delete.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Add Product</title>
+    <title>Delete Product</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -17,18 +17,19 @@
     <div th:replace="~{fragments/header.html :: nav}"></div>
 
     <main class="d-flex flex-column align-items-center gap-3 mt-5">
+        <h1 class="fw-bold mb-5">Delete Product</h1>
 
-        <h1 class="fw-bold mb-5">
-            <i class="fa fa-check-circle text-success p-3"></i>
-            Product <span class="fst-italic" th:text="${product.productName}"></span> &nbsp;was added successfully
-        </h1>
-
-        <h2>Product Details</h2>
+        <h2>
+            <i class="fa fa-exclamation-circle text-danger p-3"></i>
+            You are about to delete the following product
+        </h2>
 
         <table th:replace="~{products/details.html :: table}"></table>
 
-        <a href="/products" class="btn btn-outline-secondary mt-5">View list of all products</a>
-
+        <form method="post" class="d-flex flex-row justify-content-center gap-5">
+            <a href="/products" class="btn btn-outline-secondary mt-5">Cancel</a>
+            <input class="btn btn-outline-danger mt-5" type="submit" value="Delete">
+        </form>
     </main>
 </body>
 
