--- a/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/products/delete_success.html
+++ b/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/products/delete_success.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Add Product</title>
+    <title>Delete Product</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -20,7 +20,7 @@
 
         <h1 class="fw-bold mb-5">
             <i class="fa fa-check-circle text-success p-3"></i>
-            Product <span class="fst-italic" th:text="${product.productName}"></span> &nbsp;was added successfully
+            Product <span class="fst-italic" th:text="${product.productName}"></span> &nbsp;was deleted successfully
         </h1>
 
         <h2>Product Details</h2>
