--- a/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/products/edit_success.html
+++ b/sprint-1/17-thymeleaf-part-1/exercise_mvc-web-application/src/main/resources/templates/products/edit_success.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 
@@ -17,7 +18,10 @@
 
     <main class="d-flex flex-column align-items-center gap-3 mt-5">
 
-        <h1 class="fw-bold mb-5">Product <span class="fst-italic" th:text="${product.productName}"></span> &nbsp;was updated successfully</h1>
+        <h1 class="fw-bold mb-5">
+            <i class="fa fa-check-circle text-success p-3"></i>
+            Product <span class="fst-italic" th:text="${product.productName}"></span> &nbsp;was updated successfully
+        </h1>
 
         <h2>Updated Product Details</h2>
 
