Day30: Shopping List - implement markUncompleted function

--- a/sprint-2/10-DOM/exercise_working-with-dom/shopping-list/css/main.css
+++ b/sprint-2/10-DOM/exercise_working-with-dom/shopping-list/css/main.css
@@ -102,6 +102,12 @@ body {
     color: var(--color-med);
 }
 
+.buttons_container {
+    display: flex;
+    align-items: center;
+    column-gap: 50px;
+}
+
 .btn {
     border-radius: 10px;
     border: 0;
@@ -113,5 +119,4 @@ body {
 
 .btn:hover {
     background-color: var(--color-danger-hover);
-
 }
