Pokemon API: create PokemonCard component, add image

--- a/sprint-3/09-javascript-and-apis/pokemon-api-react-app/src/index.css
+++ b/sprint-3/09-javascript-and-apis/pokemon-api-react-app/src/index.css
@@ -24,12 +24,12 @@ body {
     font-size: 18px;
 }
 
-h1, h2, h3 {
+h1 {
     font-family: 'Matemasie';
     text-shadow: 2px 2px #ffffff;
 }
 
 h1 {
-    font-size: 3rem;
+    font-size: 4rem;
+    margin-bottom: 2rem;
 }
-
