Pokemon API: create NavigationButtons component, update App.jsx

--- a/sprint-3/09-javascript-and-apis/pokemon-api-react-app/src/App.css
+++ b/sprint-3/09-javascript-and-apis/pokemon-api-react-app/src/App.css
@@ -27,3 +27,12 @@
 .card_img {
     width: 160px;
 }
+
+.btns-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 3rem;
+
+    padding: 2rem;
+}
