--- a/sprint-3/10-introduction-to-react/exercise_northwind-react/src/components/header/Header.css
+++ b/sprint-3/10-introduction-to-react/exercise_northwind-react/src/components/header/Header.css
@@ -4,24 +4,15 @@
     background-color: #e2e2e2;
     padding: 10px;
     padding-bottom: 5px;
-  }
-  
-  #navigation img {
+}
+
+#navigation img {
     height: 50px;
-    margin-top: -5px;;
-  }
-  
-  #navigation h1 {
+    margin-top: -5px;
+    ;
+}
+
+#navigation h1 {
     padding: 0 !important;
     margin: 0 !important;
-  }
-  .link
-  {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-  }
-  .link:hover {
-    background-color: cornsilk;
-  }
+}
